<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardViewAC"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="@drawable/ripple_selectable_background"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/Story_Background_Color"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/shape_border_story"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/titleAC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="10sp"
                android:gravity="center"
                android:text="@string/Title"
                android:textSize="@dimen/Story_Title_Size"
                android:textColor="@color/Story_Title_Color"
                android:fontFamily="@font/bloodystump"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/introAC"
                android:layout_width="match_parent"
                android:layout_height="@dimen/Story_Intro_Height"
                android:layout_marginBottom="10sp"
                android:justificationMode="inter_word"
                android:maxLines="10"
                android:text="@string/Content"
                android:textSize="@dimen/Story_Content_Size"
                android:textColor="@color/Story_Content_Color"
                android:fontFamily="@font/georgia"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/Reading_Time_Label"
                    android:textSize="@dimen/Story_Reading_Time_Size"
                    android:textColor="@color/Story_Reading_Time_Label_Color"
                    android:fontFamily="@font/georgia"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/readingTimeAC"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/Reading_Time"
                    android:textSize="@dimen/Story_Reading_Time_Size"
                    android:textColor="@color/Story_Reading_Time_Color"
                    android:fontFamily="@font/georgia"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>

