<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/App_Background_Color"
    tools:context=".activity.ArticleActivity"
    >
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAA"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="@drawable/img_toolbar"
                app:layout_scrollFlags="scroll|enterAlways"
                app:contentInsetStart="0dp"
                app:contentInsetEnd="0dp"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <ImageButton
                        android:id="@+id/ibBackAA"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:contentDescription="@string/Icon"
                        android:src="@drawable/ic_back_bwhite"
                        android:background="@null"
                        />
                    <CheckBox
                        android:id="@+id/cbFavoriteAA"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_toStartOf="@+id/cbReadedAA"
                        android:layout_marginEnd="20dp"
                        android:button="@drawable/selector_favorite"
                        />
                    <CheckBox
                        android:id="@+id/cbReadedAA"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="5dp"
                        android:button="@drawable/selector_readed"
                        />
                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollViewAA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginBottom="5dp"
            android:scrollbars="vertical"
            android:background="@color/Story_Background_Color"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/shape_border_story"
                >
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/titleAA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="10sp"
                    android:gravity="center"
                    android:text="@string/Title"
                    android:textSize="@dimen/Story_Title_Size"
                    android:textColor="@color/Story_Title_Color"
                    android:fontFamily="@font/bloodystump"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/contentAA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10sp"
                    android:justificationMode="inter_word"
                    android:text="@string/Content"
                    android:textSize="@dimen/Story_Content_Size"
                    android:textColor="@color/Story_Content_Color"
                    android:fontFamily="@font/georgia"
                    />
                <ImageView
                    android:id="@+id/imageAA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10sp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/Image"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5sp"
                    android:orientation="horizontal"
                    >
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/Author_Label"
                        android:textSize="@dimen/Story_Author_Size"
                        android:textColor="@color/Story_Author_Label_Color"
                        android:fontFamily="@font/georgia"
                        />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/authorAA"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/Author"
                        android:textSize="@dimen/Story_Author_Size"
                        android:textColor="@color/Story_Author_Color"
                        android:fontFamily="@font/georgia"
                        />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</RelativeLayout>