<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.appbar.AppBarLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarHF"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@drawable/img_toolbar"
        app:layout_scrollFlags="scroll|enterAlways"
        app:contentInsetStart="0dp"
        app:contentInsetEnd="0dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <ImageButton
                android:id="@+id/ibHomeHF"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/Icon"
                android:src="@drawable/ic_home_bwhite"
                android:background="@null"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/ibHomeHF"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:text="@string/Home_Title"
                android:textSize="@dimen/Toolbar_Title_Size"
                android:textColor="@color/Toolbar_Title_Color"
                />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/llDownloadingHF"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        android:visibility="gone"
        android:background="@color/Description_Background_Color"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/shape_border_description"
            >
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:gravity="center_vertical"
                android:text="@string/Checking_Stories"
                android:textSize="@dimen/Description_Content_Size"
                android:textColor="@color/Description_Content_Color"
                />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.appbar.AppBarLayout>