<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <include
        layout="@layout/appbar_search"
        />
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollViewSF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/ivHeaderSF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/Image"
                android:src="@drawable/img_search"
                />
            <LinearLayout
                android:id="@+id/llPopularRowSF"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical"
                android:foreground="@drawable/ripple_selectable_background"
                android:background="@color/Row_Background_Color"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="@drawable/shape_border_row"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/Icon"
                        android:src="@drawable/ic_popular_cbwhite"
                        />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/Pop_Stories_Title"
                        android:textSize="@dimen/Row_Title_Size"
                        android:textColor="@color/Row_Title_Color"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llRandomRowSF"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical"
                android:foreground="@drawable/ripple_selectable_background"
                android:background="@color/Row_Background_Color"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="@drawable/shape_border_row"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/Icon"
                        android:src="@drawable/ic_random_cbwhite"
                        />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/Random_Story_Title"
                        android:textSize="@dimen/Row_Title_Size"
                        android:textColor="@color/Row_Title_Color"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewSF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        />
</androidx.coordinatorlayout.widget.CoordinatorLayout>